--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-	"scripts": {
-		"start": "nodemon server.js"
-	}
-	,"dependencies": {
-    "express": "^4.8.5"
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.8.5",
+    "morgan": "^1.2.3",
+    "socket.io": "^1.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.2.1"
